Fix webkit issues & layout issues

--- a/src/common.css
+++ b/src/common.css
@@ -134,17 +134,24 @@ main > section.b-light {
 /********************************************/
 
 input, select, textarea {
+    min-width: 150px;
+    padding: 5px;
+}
+input, select, textarea, button {
     background-color: white;
     margin: 0;
-    padding: 5px;
     border: 2px solid #2B2D42;
     border-radius: 5px;
-    min-width: 150px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-appearance: none;
     height: 31px;
     box-sizing: border-box;
     font-family: 'Verdana', sans-serif;
     font-size: 14px;
     cursor: pointer;
+    font-weight: 300;
+    color: var(--dark-blue);
 }
 textarea{
     min-width: 100%;
